# LoLArena

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
configs/: leagues.yaml  match_id_map.yaml  models.yaml  policy.yaml  proxies.yaml  tasks.yaml
data/matches/mid-season_invitational_deep_cross_gaming_vs_team_liquid_2026-06-29/: fixture.json
data/matches/mid-season_invitational_karmine_corp_vs_deep_cross_gaming_2026-06-28/: context_pack.json  fixture.json
data/matches/mid-season_invitational_t1_vs_karmine_corp_2026-06-29/: fixture.json
deploy/: install.sh  lolarena.service
doc/citoapi-lol/: 01-overview.md  02-leagues-schedule-standings.md  03-players.md  04-teams.md  05-matches-games.md  06-live.md  07-transfers.md  08-tournaments-champions-analytics.md  09-webhooks.md  README.md
doc/pandaScoreApi/: lol_urls.txt
doc/webSearch/: doc.md
docs/site/: index.html
prompts/: betting_system.md  system.md  task_betting.md  task_game.md  task_match.md
schemas/: game_prediction.schema.json  match_prediction.schema.json
src/: __init__.py  __main__.py  cli.py  config.py
src/adapters/: __init__.py  cito.py  pandascore.py  websearch.py
src/graders/: __init__.py  grade_game.py  grade_match.py
src/graders/metrics/: __init__.py
src/leaderboard/: __init__.py  build_site.py
src/pipeline/: __init__.py  betting.py  collect.py  orchestrator.py  prompt_build.py  scheduler.py  validate.py
src/runners/: __init__.py  anthropic.py  base.py  google.py  openai_compat.py  retry.py
src/server/: __init__.py  main.py
(+157 files in other folders)
