[project]
name = "lolArena"
version = "0.1.0"
description = "League of Legends match prediction benchmark"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "google-genai>=0.8.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "jsonschema>=4.21",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
lolArena = "src.cli:main"
